# dotfiles

./: .gitattributes  .gitignore  .latexmkrc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  brew.sh  dotfilesLink.sh  homebrew.sh  init.sh  install.sh  link.sh  linuxbrew.sh  setup.sh  test.zsh
.config/atuin/: config.toml
.config/bat/: config
.config/brewfile/: Brewfile
.config/broot/: .gitignore  conf.hjson
.config/claude/: CLAUDE.md  settings.json  statusline-command.sh
.config/claude/skills/new-python-project/templates/: .pre-commit-config.yaml  envrc  pyproject.toml
.config/codex/: AGENTS.md
.config/direnv/: direnvrc
.config/doom/: config.el  init.el
.config/fsh/: overlay.ini
.config/git/: README.md  config  ignore
.config/latexmk/: latexmkrc
.config/mackup/: .mackup.cfg
.config/peco/: config.json
.config/procs/: config.toml
.config/python/: .pythonrc.py  repl.py
.config/ripgrep/: config
.config/tmux/: tmux.conf
.doom.d/: config.el  custom.el  init.el
.emacs.d/: init.el
.git.d/: .gitconfig  .gitignore_global  README.md
.github/repro/: bundle-race.sh  openssl.sh
.github/workflows/: lint.yml  repro-openssl.yml  test-installer.yml  test-linux.yml  test-macos.yml  test.yml
.mackup/: bettertouchtool.cfg  zsh-hist.cfg
.peco/: config.json
.setup/: README.md  go-packages.sh  homebrew.sh  init.sh  install-basic-packages.sh  install.sh  link.sh  linuxbrew.sh  python-packages.sh  setup-defaults.sh  setup-shell.sh
.setup/homebrew/: Brewfile  Brewfile.full  init.sh
.setup/linuxbrew/: Brewfile  Brewfile.full  init.sh
.tmux.d/: .tmux.conf
.zsh.d/: .p10k.zsh  .zaliases  .zprofile  .zsh_aliases  .zshenv  .zshenv.basil  .zshenv.mac  .zshrc  .zshrc.basil  .zshrc.mac
.zsh.d/.zfunc/: difference  isect  les  lspath  mkcd  pss  resetenv  tssh  union
.zsh.d/.zshrc.d/: alias.zsh  base.zsh  completion.zsh  keybinding.zsh  misc.zsh  option.zsh  plugin.zsh
.zsh.d/functions/: _ls_abbrev  bm  difference  fs  isect  les  lspath  mkcd  union
.zsh.d/linux/: .zaliases  .zprofile  .zshenv  .zshrc
.zsh.d/macos/: .zshenv  .zshrc
containers/: centos.dockerfile  debian.dockerfile  fedora.dockerfile  rockylinux.dockerfile  ubuntu.dockerfile
deploy/: docker-cli-plugins.sh  launch-agents.sh  main.sh
dockerfile/: debian.dockerfile  fedora.dockerfile  ubuntu.dockerfile  ubuntu26.04.dockerfile
init/: Linux.md  Mac.md  README.md  RaspberryPi4.md  go-packages.sh  init.sh  link.sh  main.sh  node-packages.sh  python-packages.sh  rust-packages.sh  setup-defaults.sh  setup-shell.sh  utils.sh
test/: difference.zsh  isect.zsh  main.zsh  readlinkf.sh  union.zsh
(+41 files in other folders)
