[project]
name = "PROJECT_NAME"
version = "0.1.0"
description = "TODO: one-line description"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # runtime deps go here; add with `uv add <pkg>`
]

[dependency-groups]
dev = [
    "ipdb",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"  # The minimum Python version to target
src = ["src"]

[tool.ruff.lint]
# Common superset. Trim per project.
select = ["E", "F", "W", "I", "B", "PL", "NPY", "RUF", "UP", "TID", "COM", "PT", "ARG", "PYI"]
ignore = [
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "E501",     # Line too long
    "E722",     # Do not use bare `except`
    "RUF001",   # String contains ambiguous unicode char (Japanese text)
    "RUF002",   # Docstring contains ambiguous unicode char (Japanese text)
    "RUF003",   # Comment contains ambiguous unicode char (Japanese text)
    "COM812",   # Trailing comma missing
    "ANN002",   # Missing type annotation for `*args`
    "ANN003",   # Missing type annotation for `**kwargs`
    "D",        # pydocstyle (enabled selectively via convention below)
    "FA100",    # Missing `from __future__ import annotations`
    "S101",     # Use of `assert` detected
    "TRY003",   # Avoid specifying long messages outside the exception class
    "ANN401",   # Dynamically typed expressions (typing.Any) disallowed
    "C408",     # Unnecessary `dict` call (rewrite as a literal)
    "FBT001",   # Boolean-typed positional argument
    "FBT002",   # Boolean default positional argument
    "ERA001",   # Found commented-out code
    "EM102",    # Exception must not use an f-string literal
    "NPY002",   # Legacy np.random.seed
    "T201",     # `print` found (allowed)
    "ANN204",   # Missing return type for special method `__init__`
    "S603",     # subprocess call: untrusted input check
    "S607",     # Starting a process with a partial executable path
    "PLC0415",  # `import` should be at top-level (allow local imports)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-returns = 10  # default: 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "ARG"]

[tool.ty.src]
exclude = [".claude/worktrees"]

[tool.ty.rules]
unresolved-import = "ignore"
